--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div id="root"></div>
 
     <script>
-        var path; //"https://unpkg.com/@kunukn/dfds/dist/icons.min.svg"
+        var path;
         loadIcons({ path: path });
 
         function loadIcons(props) {
