--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>component library</title>
     <link rel="shortcut icon" href="">
+
+    <link rel="preload" href="./fonts/main/DFDS-Regular.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
 <body>
@@ -14,31 +16,27 @@
     <svg style="outline: 1px solid red;" width=200 height=100>
         <use xlink:href="#triangle" />
     </svg>
-    <div id="root"></div>
+    <div id="root">Loading the application...</div>
 
     <script>
-        loadIcons();
 
-        function loadIcons(props) {
-            var path = props && props.path;
-            var callback = props && props.callback;
-            var delay = props && props.delay;
-
+        (function loadIcons(props) {
             // IE 11 support
             var ajax = new XMLHttpRequest();
             ajax.onload = function (e) {
-                var div = document.createElement("div");
-                div.style.display = 'none';
-                div.className = 'svg-in-the-dom';
-                div.innerHTML = ajax.responseText;
-                document
-                    .body
-                    .insertBefore(div, document.body.childNodes[0]);
-                callback && callback(ajax.responseText);
+                if (ajax.status === 200) {
+                    var div = document.createElement("div");
+                    div.style.display = 'none';
+                    div.className = 'svg-in-the-dom';
+                    div.innerHTML = ajax.responseText;
+                    document
+                        .body
+                        .insertBefore(div, document.body.childNodes[0]);
+                }
             }
-            ajax.open("GET", path || "/icons.svg", true);
+            ajax.open("GET", "/icons.svg", true);
             ajax.send();
-        }
+        })();
     </script>
 </body>
 
