--- a/src/index.html
+++ b/src/index.html
@@ -2,42 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>component library</title>
-    <link rel="shortcut icon" href="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>component library</title>
+  <link rel="shortcut icon" href="">
 
-    <link rel="preload" href="./fonts/main/DFDS-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/DFDS-Regular.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
 <body>
-    <div style='font-family: DFDS'>yarn storybook</div>
-    <svg style="outline: 1px solid red;" width=200 height=100>
-        <use xlink:href="#triangle" />
-    </svg>
-    <div id="root">Loading the application...</div>
+  <div style='font-family: DFDS'>yarn storybook</div>
+  <svg style="outline: 1px solid red;" width=200 height=100>
+    <use xlink:href="#triangle" />
+  </svg>
+  <div id="root">Loading the application...</div>
 
-    <script>
-
-        (function loadIcons(props) {
-            // IE 11 support
-            var ajax = new XMLHttpRequest();
-            ajax.onload = function (e) {
-                if (ajax.status === 200) {
-                    var div = document.createElement("div");
-                    div.style.display = 'none';
-                    div.className = 'svg-in-the-dom';
-                    div.innerHTML = ajax.responseText;
-                    document
-                        .body
-                        .insertBefore(div, document.body.childNodes[0]);
-                }
-            }
-            ajax.open("GET", "/icons.svg", true);
-            ajax.send();
-        })();
-    </script>
+  <script>
+    (function loadIconsIntoTheDOM() {
+      console.log('loadIconsIntoTheDOM');
+      // IE 11 support
+      var ajax = new XMLHttpRequest();
+      ajax.onload = function (e) {
+        if (ajax.status === 200) {
+          var div = document.createElement("div");
+          div.style.display = 'none';
+          div.className = 'svg-in-the-dom';
+          div.innerHTML = ajax.responseText;
+          document
+            .body
+            .insertBefore(div, document.body.childNodes[0]);
+        }
+      }
+      ajax.open("GET", "/icons.svg", true);
+      ajax.send();
+    })();
+  </script>
 </body>
 
 </html>
